--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -2,23 +2,60 @@
   'vendors/normalize';
 
 @import
-  'utils/variables',
-  'utils/mixins';
+  'utils/variables'
+, 'utils/mixins';
 
 @import
-  'base/reset',
-  'base/typography';
+  'base/reset'
+, 'base/typography'
+, 'base/list-item';
 
-// @import
-//   'layout';
-//
-// @import
-//   'components';
-//
+@import
+  'layout/dynamic';
+
+@import
+  'components/app'
+, 'components/topic-list-item'
+, 'components/topic'
+, 'components/post-list-item'
+, 'components/post'
+, 'components/post-temp'
+, 'components/reply'
+, 'components/text-area'
+, 'components/input';
+
 // @import
 //   'pages';
 
-#wrapper {
-  max-width: 700px;
-  margin: 0 auto;
+body {
+  line-height: 1.4;
+  font-size: 18px;
+}
+span {
+  font-size: 14px;
+}
+
+blockquote {
+  margin: 0;
+  border-left: 2px solid #ccc;
+  padding-left: 15px;
+}
+
+button {
+  @include rounded(3px);
+  border: none;
+  padding: 2px 10px;
+  color: white;
+}
+
+button.success {
+  background-color: #66BB6A;
+}
+
+button.failure {
+  background-color: #EF5350;
+}
+
+.post img, .post-form img {
+  max-width: 100%;
 }
