socket io functionality is up

--- a/src/stylesheets/components/input.scss
+++ b/src/stylesheets/components/input.scss
@@ -10,6 +10,10 @@
   font-size: 28px;
 }
 .controlled-input.topic-form-input {
-  padding: 10px 0;
+  padding: 10px 5px;
   margin: 15px 0;
+}
+.controlled-input.reply-form-input {
+  margin: 10px 0;
+  padding: 10px 5px;
 }
