--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -46,6 +46,7 @@ button {
   border: none;
   padding: 2px 10px;
   color: white;
+  width: 100%;
 }
 
 button.success {
@@ -54,6 +55,10 @@ button.success {
 
 button.failure {
   background-color: #EF5350;
+}
+
+button.warning {
+  background-color: #FFC400;
 }
 
 .post img, .post-form img {
