some styling changes

--- a/src/stylesheets/components/text-area.scss
+++ b/src/stylesheets/components/text-area.scss
@@ -1,4 +1,6 @@
 .controlled-textarea {
+  font-family: 'Inconsolata' monospace;
+  font-weight: 300;
   width: 100%;
   border-top: 0;
   border-left: 0;
