--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -20,6 +20,7 @@
 , 'components/post-list-item'
 , 'components/post'
 , 'components/post-temp'
+, 'components/replies'
 , 'components/reply'
 , 'components/text-area'
 , 'components/input';
